--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>beyond verbal api test</title>
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 </head>
 <body>
-  <p>select file to send to beyond verbal api for analysis</p>
-  <input type="file" id="file">
-  <button id="sendfile">Send</button>
+  <p>Press Start then begin speaking</p>
+  <button id="start">Start Recording</button>
   <script src="./main.js"></script>
 </body>
 </html>
